Mise a jour pom.xml